--- a/Meu Site/css/bio.css
+++ b/Meu Site/css/bio.css
@@ -1,4 +1,4 @@
-h1, h2, h3{
+h1, h2, h3, h4{
     background-color: black;
     color: white;
     font-family: 'Times New Roman', Times, serif;
@@ -12,3 +12,9 @@ p{
 body{
     background-color: #93D7ED;
 }
+
+redessociais {
+    float: left;
+        width: 180px;
+        height: 80px;
+    }
