--- a/Meu Site/css/bio.css
+++ b/Meu Site/css/bio.css
@@ -5,16 +5,30 @@
     text-align: center;
     text-shadow: 5px 2px  black;
 }
+
 #SobreMim, #ComoTrabalho, #Experiencia, #Contato{
-    
     background-color: black;
+    border: 2px solid white;
     color: white;
     font-size: 25px;
     font-family: 'Times New Roman', Times, serif;
     text-align: center;
-    padding: 1px;
+    padding: 5px;
+    
 }
+blockquote{
+    margin: 15px;
+    padding: 5px;
+    border: 5px solid white;
+    background-color: gray;
+
+}
+cite{
+    font-style: italic;
+}
+
 p{
+    padding: 5px;
     text-align: justify;
     line-height: 2;
 }
@@ -25,16 +39,15 @@ body{
 
 #redessociais {
     float: center;
-    margin-top: 10;
-    padding: 5px;
+    padding: 25px;
     width: 60; height: 60;
-
 }
 
 #menu{
     background-color: #d3d5d7;
+    padding: 5px;
     font-family: 'Times New Roman', Times, serif;
-    border: 2px solid black;
+    border: 2px dotted black;
     font-size: 20px;
 }
 
@@ -43,8 +56,14 @@ ul{
    margin:0; padding: 0; 
    text-align: center; 
 }
+
 li{
     margin: 0 10px;
     display: inline;
 }
 
+main div{
+    width: 720px;
+    margin: auto;
+    padding: 30px 0px;
+}
