--- a/Meu Site/css/bio.css
+++ b/Meu Site/css/bio.css
@@ -1,12 +1,4 @@
-#tituloprincipal{
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    color: #f4e3e2;
-    font-size: 50px;
-    text-align: center;
-    text-shadow: 5px 2px  black;
-}
-
-#SobreMim, #ComoTrabalho, #Experiencia, #Contato{
+#SobreMim, #ComoTrabalho, #Experiencia{
     background-color: black;
     border: 2px solid white;
     color: white;
@@ -19,9 +11,8 @@
 blockquote{
     margin: 15px;
     padding: 5px;
-    border: 5px solid white;
+    border: 5px solid #d3d5d7;
     background-color: gray;
-
 }
 cite{
     font-style: italic;
@@ -34,20 +25,14 @@ p{
 }
 
 body{
-    background-color: #fe5f55;
-}
-
-#redessociais {
-    float: center;
-    padding: 25px;
-    width: 60; height: 60;
+    background-color: #4c70be;
 }
 
 #menu{
-    background-color: #d3d5d7;
+    background-color: #7585a3;
     padding: 5px;
     font-family: 'Times New Roman', Times, serif;
-    border: 2px dotted black;
+    border: 2px double black;
     font-size: 20px;
 }
 
@@ -66,4 +51,20 @@ main div{
     width: 720px;
     margin: auto;
     padding: 30px 0px;
+}
+
+#redessociais {
+    float: center;
+    padding: 25px;
+    width: 60; height: 60;
+}
+#Contato{
+    background-color: black;
+    border: 2px solid white;
+    color: white;
+    font-size: 25px;
+    font-family: 'Times New Roman', Times, serif;
+    text-align: center;
+    padding: 5px;
+    
 }
