--- a/Meu Site/css/bio.css
+++ b/Meu Site/css/bio.css
@@ -1,3 +1,16 @@
+@import url('https://fonts.googleapis.com/css?family=Work+Sans&display=swap');
+
+
+#tituloprincipal{
+    background-color: #7585a3; 
+    border-bottom:8px solid black;
+    font-family: Impact, Haettenschweiler, Charcoal, sans-serif;
+    color: #09bbf1;
+    font-size: 50px;
+    text-align: center;
+    text-shadow: 5px 2px  black;
+}
+
 #SobreMim, #ComoTrabalho, #Experiencia{
     background-color: black;
     border: 2px solid white;
@@ -29,22 +42,13 @@ body{
 }
 
 #menu{
+    text-transform: lowercase;
+    text-align: center;
     background-color: #7585a3;
     padding: 5px;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Work Sans', sans-serif;
     border: 2px double black;
     font-size: 20px;
-}
-
-ul{
-   list-style: none outside none; 
-   margin:0; padding: 0; 
-   text-align: center; 
-}
-
-li{
-    margin: 0 10px;
-    display: inline;
 }
 
 main div{
@@ -53,11 +57,6 @@ main div{
     padding: 30px 0px;
 }
 
-#redessociais {
-    float: center;
-    padding: 25px;
-    width: 60; height: 60;
-}
 #Contato{
     background-color: black;
     border: 2px solid white;
@@ -67,4 +66,62 @@ main div{
     text-align: center;
     padding: 5px;
     
+}
+
+.icones-sociais a {
+    display: inline-block;
+    height: 40px;
+    width: 40px;
+    padding: 5px;
+    text-indent: -99999px;
+    background-repeat: no-repeat;
+}
+
+.linkedin{
+    background-image: url(/imagens/linkedin.png);
+    background-size: 40px 40px;
+
+}
+
+.facebook{
+    background-image: url(/imagens/facebookicon.png);
+    background-size: 40px 40px;
+}
+
+.twitter{
+    background-image: url(/imagens/twitter.png);
+    background-size: 40px 40px;
+}
+
+.github {
+    background-image: url(/imagens/github-512.png);
+    background-size: 40px 40px;
+}
+
+.e-mail{
+    background-image:url(/imagens/emailicon.png);
+    background-size: 40px 40px;
+}
+
+header{
+    grid-area: hd;
+}
+
+main{
+    grid-area: main;
+}
+
+nav{
+    grid-area: nv;
+}
+
+footer{
+    grid-area: ft;
+}
+
+.grid-container{
+    display: grid;
+    grid-template-areas: "hd hd" "main nv" "ft ft";
+    grid-template-rows: 5% 75% 10%;
+    grid-template-columns: 65% 35%;
 }
