--- a/Meu Site/css/bio.css
+++ b/Meu Site/css/bio.css
@@ -1,17 +1,16 @@
 @import url('https://fonts.googleapis.com/css?family=Work+Sans&display=swap');
 
 
-#tituloprincipal{
-    background-color: #7585a3; 
-    border-bottom:8px solid black;
+.cabecalho h1{
     font-family: Impact, Haettenschweiler, Charcoal, sans-serif;
-    font-size: 50px;
+    font-size: 10vh;
     color: #09bbf1;
     text-align: center;
     text-shadow: 5px 2px  black;
+    margin: 0px;
 }
 
-#SobreMim, #ComoTrabalho, #Experiencia{
+main h1{
     background-color: black;
     border: 2px solid white;
     color: white;
@@ -19,14 +18,17 @@
     font-family: 'Times New Roman', Times, serif;
     text-align: center;
     padding: 5px;
+    margin-top: 5%;
     
 }
+
 blockquote{
     margin: 15px;
     padding: 5px;
     border: 5px solid #d3d5d7;
     background-color: gray;
 }
+
 cite{
     font-style: italic;
 }
@@ -39,89 +41,98 @@ p{
 
 body{
     background-color: #4c70be;
+    height: 100%;
+    
 }
 
 .menu{
+    background-color: #7585a3;
+    color: black;
+    border-left: 2px solid black;
+    font-size: 20px;
+    height: 100%;
+    margin: 0%;
+    grid-area: nv;
+}
+
+.menu li{
+    font-family: 'Work Sans', sans-serif;
     text-transform: lowercase;
     text-align: center;
-    background-color: #7585a3;
-    padding: 5px;
-    font-family: 'Work Sans', sans-serif;
-    border: 2px double black;
-    font-size: 20px;
+    color: black;
+    padding: 1%;
 }
 
-main div{
-    width: 720px;
+.content{
+    width: 72%;
     margin: auto;
-    padding: 30px 0px;
+    padding: auto auto; 
+    margin-bottom: 1%;
 }
 
-#Contato{
-    background-color: black;
-    border: 2px solid white;
-    color: white;
-    font-size: 25px;
-    font-family: 'Times New Roman', Times, serif;
-    text-align: center;
-    padding: 5px;
-    
+.icones-sociais li{
+    display: inline;
+    margin: 5%;
 }
 
 .icones-sociais a {
     display: inline-block;
-    height: 40px;
-    width: 40px;
-    padding: 5px;
+    height: 25px;
+    width: 25px;
     text-indent: -99999px;
-    background-repeat: no-repeat;
 }
+
 
 .linkedin{
     background-image: url(/imagens/linkedin.png);
-    background-size: 40px 40px;
-
-}
-
-.facebook{
-    background-image: url(/imagens/facebookicon.png);
-    background-size: 40px 40px;
-}
-
-.twitter{
-    background-image: url(/imagens/twitter.png);
-    background-size: 40px 40px;
+    background-size: 100% 100%;
 }
 
 .github {
     background-image: url(/imagens/github-512.png);
-    background-size: 40px 40px;
+    background-size: 100% 100%;
 }
 
 .e-mail{
     background-image:url(/imagens/emailicon.png);
-    background-size: 40px 40px;
+    background-size: 100% 100%;
 }
 
-.header{
+header{
     grid-area: hd;
+    background-color: #7585a3; 
+    border-bottom:8px solid black;
 }
 
 main{
     grid-area: main;
 }
 
-.menu{
-    grid-area: nv;
-}
-
-footer{
+.rodape{
     grid-area: ft;
+    background-color: #7585a3;
+    height: 100%;
 }
 
 .grid-container{
     display: grid;
     grid-template-areas: "hd hd" "main nv" "ft ft";
-    grid-template-rows: 30% 65% 5%;
+    grid-template-rows: auto auto auto;
     grid-template-columns: 80% 20%;
 }
+
+table {
+    border: 2px solid black;
+    border-collapse: collapse;
+    width: 100%;
+    
+}
+td {
+    border: 2px solid black;
+    padding: 5px 10px;
+    background-color: #7585a3;
+    }
+th{
+    border: 2px solid black;
+    background-color: orangered;
+    }
