--- a/Meu Site/css/bio.css
+++ b/Meu Site/css/bio.css
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Work+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Patua+One&display=swap');
 
 
 .cabecalho h1{
-    font-family: Impact, Haettenschweiler, Charcoal, sans-serif;
+    font-family: Impact, Haettenschweiler, Charcoal, 'Patua One', cursive, sans-serif;
     font-size: 10vh;
     color: #09bbf1;
     text-align: center;
@@ -135,4 +136,30 @@ td {
 th{
     border: 2px solid black;
     background-color: orangered;
+    }
+
+    @media screen and (max-width: 600px){
+        body{
+            width: 1fr;
+        }
+        .grid-container{
+            display: grid;
+            grid-template-areas:"hd" 
+                                "nv"
+                                "main"
+                                "ft";
+            grid-template-rows: auto auto auto auto;
+            grid-template-columns: 100%;
+        }
+        .menu li {
+            display: inline;
+        }
+        .menu{
+            text-align: center;
+            border: black solid 1px;
+            margin: 2px;
+        }
+        .content{
+            margin-top:10px;
+        }
     }
